--- a/source/Eeyore.Bits/Eeyore.Bits.csproj
+++ b/source/Eeyore.Bits/Eeyore.Bits.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{0C5D08DC-8276-4371-8BA9-F5B2D1BBE9EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Eeyore.Bits.Net</RootNamespace>
-    <AssemblyName>Eeyore.Bits.Net</AssemblyName>
+    <RootNamespace>Eeyore.Bits</RootNamespace>
+    <AssemblyName>Eeyore.Bits</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -17,19 +17,20 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\bin\Eeyore.Bits.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Eeyore.Bits.Net.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Eeyore.Bits.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
     <DebugSymbols>true</DebugSymbols>
@@ -56,7 +57,6 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +113,8 @@
     <Compile Include="Enumerations\JobState.cs" />
     <Compile Include="Enumerations\JobType.cs" />
     <Compile Include="Enumerations\NotifyFlags.cs" />
+    <Compile Include="ObjectModel\Disposable.cs" />
+    <Compile Include="ObjectModel\EventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Adapters\ProxySettingsAdapter.cs" />
     <Compile Include="Extensions.cs" />
@@ -121,12 +123,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Interop\Readme.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Eeyore.Commons\Eeyore.Commons.csproj">
-      <Project>{3C43B160-20C9-4EE1-A6B3-47CEED77594F}</Project>
-      <Name>Eeyore.Commons</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
